DevOps-Guides: jenkins: updates to Jenkins installation guides for build, containerization, deployment, IaC, notification, QA, and testing tools
- Enhanced installation instructions for Git, Maven, Gradle, npm, Docker, Kubernetes CLI, Ansible, Helm, Terraform, AWS CLI, Azure CLI, Google Cloud SDK, and various notification tools.
- Improved organization and clarity of guides, including prerequisites, installation methods, and configuration steps.
- Added detailed sections for integrating tools with Jenkins pipelines, ensuring best practices and usability.
- Updated code examples and configurations to reflect the latest versions and methodologies.

Signed-off-by: NotHarshhaa <reddyharshhaa12@gmail.com>